--- a/SuperShop/Views/Products/Create.cshtml
+++ b/SuperShop/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SuperShop.Data.Entities.Product
+﻿@model SuperShop.Models.ProductViewModel
 
 @{
     ViewData["Title"] = "Create new product";
@@ -18,13 +18,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" type="file"/>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastPurchase" class="control-label"></label>
