--- a/SuperShop/Views/Products/Edit.cshtml
+++ b/SuperShop/Views/Products/Edit.cshtml
@@ -10,6 +10,9 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id"/>
+            <input type="hidden" asp-for="ImageId"/>
             
             <partial name="_Products" />
 
@@ -20,10 +23,7 @@
         </form>
     </div>
     <div class="col-md-4">
-        @if (!string.IsNullOrEmpty(Model.ImageUrl))
-        {
-            <img src="@Url.Content(Model.ImageUrl)" alt="Image" style="width:300px;height:450px;max-width:100%;height:auto">
-        }
+            <img src="@Url.Content(Model.ImageFullPath )" alt="Image" style="width:300px;height:450px;max-width:100%;height:auto">
     </div>
 </div>
 
