--- a/SuperShop/Views/Products/Index.cshtml
+++ b/SuperShop/Views/Products/Index.cshtml
@@ -45,13 +45,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
-            <td>
-               @if(!string.IsNullOrEmpty(item.ImageUrl))
-                    {
-                        <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px;height:150px;max-width:100%;height:auto">
-                    }
-
-            </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.ImageId)
+                </th>
             <td>
                 @Html.DisplayFor(modelItem => item.LastPurchase)
             </td>
