--- a/SuperShop/Views/Products/Index.cshtml
+++ b/SuperShop/Views/Products/Index.cshtml
@@ -45,9 +45,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
-                <th>
-                    @Html.DisplayNameFor(model => model.ImageId)
-                </th>
+            <td>
+                @if (! string.IsNullOrEmpty(item.ImageFullPath))
+                {
+                   <img src="@Url.Content(item.ImageFullPath)" alt="Image" style="width:100px;height:150px;max-width:100%;height:auto">
+                }
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastPurchase)
             </td>
