--- a/SuperShop/Views/Products/Create.cshtml
+++ b/SuperShop/Views/Products/Create.cshtml
@@ -15,7 +15,7 @@
             <partial name="_Products"/>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" value="Create" class="btn btn-primary"><i class="fa fa-save"></i>  Create </button>
                 <a asp-action="Index" class=" btn btn-success">Back to List</a>
             </div>
         </form>
