--- a/SuperShop/Views/Orders/Index.cshtml
+++ b/SuperShop/Views/Orders/Index.cshtml
@@ -20,14 +20,14 @@
                 </th>
             }
             <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
+                @Html.DisplayNameFor(model => model.OrderDateLocal)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DeliveryDate)
             </th>
 
             <th>
-                # Lines
+                @Html.DisplayNameFor(model => model.Lines)
             </th>
 
             <th>
@@ -46,25 +46,25 @@
                 @if (this.User.IsInRole("Admin"))
                 {
                     <th>
-                        @Html.DisplayNameFor(model =>model.User.FullName)
+                        @Html.DisplayNameFor(modelItem =>item.User.FullName)
                     </th>
                 }
                 <td>
-                    @Html.DisplayNameFor(model => model.OrderDate)
+                    @Html.DisplayNameFor(modelItem => item.OrderDateLocal)
                 </td>
                 <td>
-                    @Html.DisplayNameFor(model => model.DeliveryDate)
-                </td>
-
-                <td>
-                    # Lines
+                    @Html.DisplayNameFor(modelItem => item.DeliveryDate)
                 </td>
 
                 <td>
-                    @Html.DisplayNameFor(model => model.Quantity)
+                    @Html.DisplayNameFor(modelItem => item.Lines)
+                </td>
+
+                <td>
+                    @Html.DisplayNameFor(modelItem => item.Quantity)
                 </td>
                 <td>
-                    @Html.DisplayNameFor(model => model.Value)
+                    @Html.DisplayNameFor(modelItem => item.Value)
                 </td>
                 <td>
                     <a asp-action="Deliver" asp-route-id="@item.Id" class="btn btn-info" id="btnDeliver">Deliver</a>
