--- a/SuperShop/Views/Orders/Create.cshtml
+++ b/SuperShop/Views/Orders/Create.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     <a asp-action="AddProduct" class="btn btn-success">Add Product</a>
-    <a asp-action="ConfirmOrder" class="btn btn-primary">Confirm Order</a>
+    <a asp-action="ConfirmOrder" class="btn btn-primary" id="btnConfirm">Confirm Order</a>
 </p>
 
 <table class="table">
@@ -34,23 +34,102 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.Product.Name)
+                    @Html.DisplayNameFor(modelItem => item.Product.Name)
                 </td>
                 <td>
-                    @Html.DisplayNameFor(model => model.Price)
+                    @Html.DisplayNameFor(modelItem => item.Price)
                 </td>
                 <td>
-                    @Html.DisplayNameFor(model => model.Quantity)
+                    @Html.DisplayNameFor(modelItem => item.Quantity)
                 </td>
                 <td>
-                    @Html.DisplayNameFor(model => model.Value)
+                    @Html.DisplayNameFor(modelItem => item.Value)
                 </td>
-                <td>
+                <td id="@item.Id">
                     <a asp-action="Increase" asp-route-id="@item.Id" class="btn btn-warning"><i class= "fa fa-plus"></i></a>
                     <a asp-action="Decrease" asp-route-id="@item.Id" class="btn btn-info"><i class="fa fa-minus"></i></a>
-                    <a asp-action="DeleteItem" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                    <a asp-action="DeleteItem" asp-route-id="@item.Id" class="btn btn-danger" id="btnDeleteItem">Delete</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div id="confirmDialog" class="modal fade">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Confirm Order</h4>
+                <button type="button" class="close" data-dismiss="modal"><i class="fa fa-window-close"></i></button>
+            </div>
+            <div class="modal-body">
+                <p>Do you want to confirm the order?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" id="btnYesConfirm">Yes</button>
+                <button type="button" class="btn btn-sucess" id="btnNoConfirm">No</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="deleteDialog" class="modal fade">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Delete</h4>
+                <button type="button" class="close" data-dismiss="modal"><i class="fa fa-window-close"></i></button>
+            </div>
+            <div class="modal-body">
+                <p>Do you want to delete product from order? </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" id="btnYesDelete">Yes</button>
+                <button type="button" class="btn btn-sucess" id="btnNoDelete">No</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts{
+        <script type="text/javascript">
+            $(document).ready(function(){
+                var id = 0;
+
+                $("#btnConfirm").click(function(){
+                    $("#confirmDialog").modal("show");
+                    return false;
+                });
+
+                $("#btnNoConfirm").click(function (){
+                    $("#confirmDialog").modal("hide");
+                    return false;
+                });
+
+                $("#btnYesConfirm").click(function (){
+                    window.location.href = "/Orders/ConfirmOrder";
+                });
+
+                $("a[id*=btnDeleteItem]").click(function (){
+                    id=$(this).parent()[0].id;
+                    $("#deleteDialog").modal("show");
+                    return false;
+                });
+
+                $("a[id*=btnNoDelete]").click(function () {
+                    $("#deleteDialog").modal("hide");
+                    return false;
+                });
+
+                $("a[id*=btnYesDelete]").click(function () {
+                    $("#deleteDialog").modal("hide");
+                    return false;
+                });
+
+
+                $("#btnYesDelete").click(function () {
+                    window.location.href = "/Orders/DeleteItem"+ id;
+            });
+            });
+        </script>
+}
